--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile project(':contentmanager')
+    compile 'com.github.stfalcon:contentmanager:0.1.1'
 }
